<resources>
    <string name="app_name">AvansMovieApp </string>
    <string name="lorem_ipsum" translatable="false">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut dignissim, mauris eu hendrerit dapibus, leo velit accumsan justo, eget fringilla velit mauris et nibh. Cras congue turpis tortor, sed viverra libero semper tristique. Donec commodo sapien quis urna pharetra, a cursus sem accumsan. Mauris vulputate turpis dui, in consequat velit vestibulum sit amet. Curabitur quis ipsum vestibulum, vulputate mauris non, congue ante. Cras viverra lobortis erat vel commodo. Vestibulum porta sit amet mauris a tincidunt.</string>
    <string name="release_date">Release date:</string>
    <string name="original_language">Original Language:</string>
    <string name="runtime">Runtime:</string>
    <string name="genres">Genres:</string>
    <string name="production_companies">Production Companies:</string>
    <string name="pop_main_ac_title">20 most  popular movies</string>
    <string name="mov_detail_ac_title">"Details for movie: "</string>
    <string name="sharing_text">Check out this movie!\n</string>
    <string name="searchbar_text">Search for a movie</string>
    <string name="send">send</string>
    <string name="rating_sent_text">Rating Sent</string>
    <string name="rating_bigger_5">rating should be bigger then 1 star</string>
    <string name="switch_lang_menu_text_str">Switch languages</string>
    <string name="go_to_list_menu_text_str">View created lists</string>
    <string name="unknown">Unknown</string>
    <string name="Minutes">Minutes</string>
    <string name="my_lists">My Lists</string>
    <string name="language">Language</string>
    <string name="description">Description</string>
    <string name="name">Name</string>
    <string name="create">Create</string>
    <string name="remove_list">Remove List</string>
</resources>
