<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateListActivity"
    android:padding="10dp">

    <EditText
        android:id="@+id/et_create_list_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_create_list_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_create_list_name" />

    <EditText
        android:id="@+id/et_create_list_language"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/language"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_create_list_description" />

    <Button
        android:id="@+id/btn_create_list_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/create"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_create_list_language" />
</androidx.constraintlayout.widget.ConstraintLayout>